[package]
name = "esp-clock"
version = "0.1.0"
authors = ["Kirill Mikhailov <kirill.mikhailov@espressif.com>"]
edition = "2021"
categories = ["embedded", "hardware-support"]
keywords = ["embedded", "idf", "esp-idf", "esp32", "zx"]
description = "Demonstration of esp-rust-board functionality"
repository = "https://github.com/playfulFence/esp-clock"
license = "MIT OR Apache-2.0"
readme = "README.md"

[profile.dev]
# symbols are nice and they don't increase the size on Flash
debug = true
opt-level = "z"

#[profile.release]
#opt-level = "s"

[features]
default = [ ]

[dependencies]
anyhow                  = { version = "1", features = ["backtrace"] }
log                     = "0.4"
esp-idf-sys             = { version = "0.32.1", features = ["binstart"] }
esp-idf-svc             = { version = "0.45.0" } 
esp-idf-hal             = "0.40.1"
embedded-svc            = "0.24.0"
embedded-hal            = "0.2.7"
embedded-graphics       = "0.7.1"
display-interface-spi   = "0.4.1"
ili9341                 = { version = "0.5", git = "https://github.com/yuri91/ili9341-rs" }
rustzx-utils            = { version = "0.15", features = ["std"] }
rustzx-core             = { version = "0.15", features = ["embedded-roms"] }
time                    = { version = "0.3.9", features = ["std", "macros"]}
tinybmp = "0.3.3"
profont = "0.6.1"

[build-dependencies]
embuild = "0.28.5"
anyhow = "1.0.50"