[package]
name = "rust_project_esp32c3"
version = "0.1.0"
authors = ["Kirill Mikhailov <playfulFence@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp32c3-hal = { version = "0.9.0", optional = true }
esp-println = { version = "0.5.0", features = ["esp32c3"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.7.0", features = [
    "esp32c3",
    "panic-handler",
    "print-uart",
] }

mipidsi = { git = "https://github.com/almindor/mipidsi" }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
profont = "0.6.1"   # font with extended signs and options of sizing (unlike fonts in embedded-graphics)
libm = "0.2.5"

[features]
default = [ "eh1" ]
eh1 = ["esp32c3-hal/eh1"] #required for blocking traits
