[package]
name = "rust_project_esp32s2"
version = "0.1.0"
authors = ["Kirill Mikhailov <playfulfence@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp32s2-hal = "0.9.0"
esp-println = { version = "0.5.0", features = ["esp32s2"] }
esp-backtrace = { git = "https://github.com/esp-rs/esp-backtrace", version = "0.7.0", features = [
    "esp32s2",
    "panic-handler",
    "print-uart",
] }
esp-alloc = { version = "0.3.0"}
keypad2 = "0.1.1"

[features]
default = [ "eh1" ]
eh1 = ["esp32s2-hal/eh1"] #required for blocking traits
